<resources>
    <string name="app_name">MyFarm</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_caption">Dont have an account? Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="zone">zone</string>
    <string name="Timestamp">Time</string>
    <string name="greeting">Hi, %s :)</string>
    <string name="title">MyFarm</string>
    <string name="search">Search</string>
    <string name="title_activity_info">InfoActivity</string>

</resources>
